--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>Slacker</title>
+    <title>Slacker Chat</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
-  <body ng-app='slackerApp'>
+  <body ng-app='slackerChat'>
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -52,6 +52,9 @@
     <script src="auth/auth.service.js"></script>
     <script src="users/users.service.js"></script>
     <script src="users/profile.controller.js"></script>
+    <script src="users/profile.controller.js"></script>
+    <script src="channels/channels.controller.js"></script>
+    <script src="channels/channels.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
