implemented channel creation

--- a/app/channels/index.html
+++ b/app/channels/index.html
@@ -1,16 +1,21 @@
 <div class="main">
-	<div class="message-pane">
-	  <ui-view></ui-view>
-	</div>
   <div class="sidebar">
+
 
     <div class="slack-name">
       <h2>Slacker Chat</h2>
     </div>
 
-    <div class="channel-list">
-      <div class="list-head">Channels</div>
-    </div>
+		<div class="channel-list">
+		  <div class="list-head">Channels</div>
+		  <div class="channel" ng-repeat="channel in channelsCtrl.channels">
+		    <a># {{ channel.name }}</a>
+		  </div>
+
+			<div class="channel create">
+				<a ui-sref="channels.create">+ create channel</a>
+			</div>
+		</div>
 
     <div class="my-info">
       <img class="user-pic" ng-src="{{ channelsCtrl.getGravatar(channelsCtrl.profile.$id) }}" />
@@ -28,4 +33,8 @@
     </div>
 
   </div>
+  	<div class="message-pane">
+	  	<ui-view></ui-view>
+		</div>
 </div>
+
